
- CLI SAPI:
  . Fixed bug #60112 (If URI does not contain a file, index.php is not served).
    (Laruence)
  . Fixed bug #60115 (memory definitely lost in cli server). (Laruence)

- Core:
  . Fixed bug #60120 (proc_open's streams may hang with stdin/out/err when 
    the data exceeds or is equal to 2048 bytes). (Pierre, Pascal Borreli)

20 Oct 2011, PHP 5.4.0 beta2
- General improvements:
  . Improve the warning message of incompatible arguments. (Laruence) 
  . Improve ternary operator performance when returning arrays. (Arnaud, Dmitry)
  
- Core:
  . Fixed bug #55801 (Behavior of unserialize has changed). (Mike)
  . Fixed bug #55749 (TOCTOU issue in getenv() on Windows builds). (Pierre)
  . Fixed bug #55707 (undefined reference to `__sync_fetch_and_add_4' on Linux
    parisc). (Felipe)
  . Fixed bug #55705 (Omitting a callable typehinted argument causes a segfault).
    (Felipe, Laruence)
  . Fixed bug #55758 (Digest Authenticate missed in 5.4) . (Laruence)
  . Fixed bug #55622 (memory corruption in parse_ini_string). (Pierre)
  . Fixed bug #55825 (Missing initial value of static locals in trait methods).
    (Laruence)
  . Fixed bug #60038 (SIGALRM cause segfault in php_error_cb). (Laruence)

- Openssl
  . Revert r313616 (When we have a blocking SSL socket, respect the timeout
    option, scottmac), breaks ssl support as described in bugs #55283 and #55848
  
- PDO DBlib driver:
  . Fixed bug #60033 (Incorrectly merged PDO dblib patches break
    uniqueidentifier column type). (warezthebeef at gmail dot com)

- Sysvshm
  . Fixed bug #55750 (memory copy issue in sysvshm extension).
    (Ilia, jeffhuang9999 at gmail dot com)

- Zlib:
  . Fixed bug #55544 (ob_gzhandler always conflicts with 
    zlib.output_compression). (Mike)

- SPL:
  . FilesystemIterator, GlobIterator and (Recursive)DirectoryIterator now use
    the default stream context. (Hannes)
  . Fixed bug #55807 (Wrong value for splFileObject::SKIP_EMPTY).
    (jgotti at modedemploi dot fr, Hannes)
