@@ -4,6 +4,13 @@ Bug #47281 ($php_errormsg is limited in size of characters)
 <?php
 $target_dbs = array('oracledb' => true, 'timesten' => false);  // test runs on these DBs
 require(dirname(__FILE__).'/skipif.inc');
+// error3.phpt obsoletes this test for newer Oracle client versions
+// Assume runtime client version is >= compile time client version
+$cv = explode('.', oci_client_version());
+if ($cv[0] > 11 || ($cv[0] == 11 && $cv[1] > 2) || ($cv[0] == 11 && $cv[1] == 2 && $cv[3] >= 3)) {
+    die("skip test works only with Oracle 11.2.0.2 or earlier Oracle client libraries");
+}
+
 ?> 
 --ENV--
 NLS_LANG=.AL32UTF8
